@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<flow xmlns="http://www.springframework.org/schema/webflow" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://www.springframework.org/schema/webflow http://www.springframework.org/schema/webflow/spring-webflow-1.0.xsd">
+
+	<start-state idref="test" />
+	
+	<action-state id="test">
+		<action bean="testAction" />
+		<transition on="success" to="finish" />
+	</action-state>
+	
+	<end-state id="finish" view="${activeFlow.attributes['name']}"/>
+</flow>
